--- a/SOAL 1.html
+++ b/SOAL 1.html
@@ -18,7 +18,7 @@
                                     
         }
     </script>
-    <title>SOAL 1 RERE</title>
+    <title>SOAL 1 NAUFAL</title>
 </head>
 <body>
     <h3>-----MENGHITUNG LUAS KELILING LINGKARAN-----</h3>
